# aoc

./: pick_language.py
2023/aoc_2023_01_python/: pyproject.toml
2023/aoc_2023_01_python/src/aoc_2023_01/: part1.py  part2.py
2023/aoc_2023_01_python/tests/: results.py
2023/aoc_2023_02_scala/advent-of-code-2023-day-02/: build.sbt
2023/aoc_2023_02_scala/advent-of-code-2023-day-02/src/main/scala/: Main.scala
2023/aoc_2023_02_scala/advent-of-code-2023-day-02/src/test/scala/: MySuite.scala
